fixtures/cs-jwt-01/bad/decode-reexport-no-verify-call.ts
import jwt from "jsonwebtoken";
export { verify } from "jsonwebtoken";

export function readToken(token: string) {
	const payload = jwt.decode(token);
	return payload;
}
